# swim-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  config-example.toml
.github/workflows/: docker.yml
src/: config.rs  main.rs
src/api/: config.rs  errors.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/database/: config.rs  mod.rs  models.rs
src/discord/: commands.rs  config.rs  errors.rs  event_handler.rs  mod.rs
