[package]
name = "swimbotrs"
version = "0.1.0"
edition = "2018"

[dependencies]
poise = "0.5.6"
warp = "0.3.6"
toml = "0.8.2"
serde = {version = "1.0.188", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "array-impls"] }

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["cache", "gateway", "model"]