[package]
name = "swimbotrs"
version = "0.1.0"
edition = "2018"

[dependencies]
warp = "0.3.6"
toml = "0.8.2"
serde = {version = "1.0.188", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "array-impls"] }
async-trait = "0.1.74"
tokio-cron = "0.1.2"
poise = "0.6.1"
command_attr = "^0.5.1"

[dependencies.serenity]
version = "0.12.0"
default-features = true
features = ["gateway", "model", "rustls_backend"]
