[package]
name = "swimbotrs"
version = "0.1.0"
edition = "2018"

[dependencies]
warp = "0.3.6"
toml = "0.8.2"
serde = {version = "1.0.188", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "array-impls"] }
async-trait = "0.1.74"
tokio-cron = "0.1.2"
command_attr = "^0.5.1"
fern = "0.6.2"
log = "0.4.20"
humantime = "2.1.0"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.small-fixed-array]
git = "https://github.com/GnomedDev/small-fixed-array"

# [dependencies.serenity]
# git = "https://github.com/serenity-rs/serenity"
# # branch = "next"
# rev = "186f8df"
# default-features = true
# features = ["gateway", "model", "rustls_backend"]